Fixed jumping icon

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -281,6 +281,7 @@ padding-bottom: 40px;
     z-index: 20000;
     -moz-transition: 0.5s;
     -webkit-transition: 0.5s;
+    -webkit-transform: translate(0); /* Fixed the jumping on position fixed */
     -o-transition: 0.5s;
     transition: 0.5s;
        transform:rotate(-90deg);
